--- a/pao-burger/src/app/home/home.page.html
+++ b/pao-burger/src/app/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-row class="c1-header">
-   <ion-col size="2" class="menu-icon">
+   <ion-col size="5" class="menu-icon">
      <ion-icon name="reorder-three"></ion-icon>
    </ion-col>
-   <ion-col size="8">
-     UniFCV Salgados
+   <ion-col size="5">
+     PãoBurger
    </ion-col>
-   <ion-col size="2" class="c1-title">
+   <ion-col size="0" class="c1-title">
      <ion-icon name="person-circle-outline"></ion-icon>
    </ion-col>
  </ion-row>
