--- a/pao-burger/src/app/home/home.page.html
+++ b/pao-burger/src/app/home/home.page.html
@@ -25,8 +25,7 @@
 
 </ion-content>
 <ion-footer>
-  <ion-button class="b1-compra" expand="full">
+  <ion-button class="b1-compra">
     <ion-icon name="cart"></ion-icon>
-    Adcionar ao carrinho
   </ion-button>
 </ion-footer>
