--- a/pao-burger/src/app/home/home.page.scss
+++ b/pao-burger/src/app/home/home.page.scss
@@ -27,7 +27,7 @@
 }
 
 .c1-header{
-  background-color: #00fc61d8;
+  background-color: #4f5050;
   font-size: 1.5rem;
   height: 40px;
   display: flex;
@@ -36,7 +36,7 @@
 }
 .c1-opcoes{
   font-size: 1.2rem;
-  background-color: #964b00 ;
+  background-color: #920ddf ;
   height: 30px;
   display: flex;
   justify-content: center;
@@ -44,5 +44,6 @@
 }
 .b1-compra{
   background-color: #ff9602;
-  color: #FFFFFF;
+  border-radius: 70%;
+  float: right;
 }
