--- a/pao-burger/src/app/home/home.page.scss
+++ b/pao-burger/src/app/home/home.page.scss
@@ -35,9 +35,9 @@
   align-items: center;
 }
 .c1-opcoes{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   background-color: #920ddf ;
-  height: 30px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,4 +45,10 @@
 .b1-compra{
   background-color: #ff9602;
   border-radius: 70%;
+}
+.o1-burger{
+  color:#000000;
+}
+.o1-batata{
+  color:#000000;;
 }
