Corrigindo o segment e adicionando imagens

--- a/pao-burger/src/app/home/home.page.scss
+++ b/pao-burger/src/app/home/home.page.scss
@@ -35,7 +35,15 @@
   align-items: center;
 }
 .c1-opcoes{
-  font-size: 1.5rem;
+  font-size: 2.0rem;
+  background-color: #920ddf ;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.c2-opcoes{
+  font-size: 2.0rem;
   background-color: #920ddf ;
   height: 50px;
   display: flex;
