--- a/pao-burger/src/app/home/home.page.html
+++ b/pao-burger/src/app/home/home.page.html
@@ -10,34 +10,66 @@
      <ion-icon name="person-circle-outline"></ion-icon>
    </ion-col>
  </ion-row>
- <ion-row class = "c1-opcoes"> 
-  <ion-segment (ionChange) = "segmentChanged($event)">
-    <ion-segment-button value = 'burgers'>
-      <ion-slides pager="false" class="o1-burger">
-       BURGERS
-      </ion-slides>
-    </ion-segment-button>
-    <ion-segment-button value = 'fries'>
-     <ion-slides pager="false" class="o1-batata">
-      BATATA FRITA
-      </ion-slides>
-    </ion-segment-button>  
-    </ion-segment>
+ <ion-row > 
+    <ion-col size = "6" class = "c1-opcoes">
+      <ion-segment [(ngModel)] = "segment">
+        <ion-segment-button [value] = "'0'">
+          <ion-slides pager="false" class="o1-burger">
+          BURGERS
+          </ion-slides>
+        </ion-segment-button>
+      </ion-segment> 
+    </ion-col>
+      
+    <ion-col size = "6" class = "c2-opcoes">
+      <ion-segment [(ngModel)] = "segment">
+        <ion-segment-button [value] = "'1'">
+          <ion-slides pager="false" class="o1-batata">
+          BATATA FRITA
+          </ion-slides>
+        </ion-segment-button>  
+      </ion-segment>
+    </ion-col>
  </ion-row>
 </ion-header>
 
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" >
 
-  <ion-row>
-    <ion-img src="assets/burger1.jpg"></ion-img>
+<ion-grid *ngIf="segment == '0'">
 
-  </ion-row>
+    <ion-row>
+      <ion-col size = "6" class="b1-content">
+        <ion-img src="assets/burger1.jpg"></ion-img>
+      </ion-col>
 
-  <ion-row>
-    <ion-img src="assets/burger2.jpg"></ion-img>
+      <ion-col size = "5" class="b2-content">
+        <ion-img src="assets/burger5.jpg"></ion-img>
+      </ion-col>
 
-  </ion-row>
+      <ion-col size = "6" class="b3-content">
+        <ion-img src="assets/burger3.jpg"></ion-img>
+      </ion-col>
+    </ion-row>
+</ion-grid>
+
+<ion-grid *ngIf="segment == '1'">
+    <ion-row>
+      <ion-col size = "6" class="f1-content">
+        <ion-img src="assets/teste3.jpg"></ion-img>
+      </ion-col>
+
+      <ion-col size = "5" class="f2-content">
+        <ion-img src="assets/batata4.jpg"></ion-img>
+      </ion-col>
+      
+      <ion-col size = "5" class="f3-content">
+        <ion-img src="assets/teste1.jpg"></ion-img>
+      </ion-col>
+    </ion-row>
+
+
+</ion-grid>
 </ion-content>
 <ion-footer>
   <ion-button class="b1-compra" expand="full">
