--- a/pao-burger/src/app/home/home.page.html
+++ b/pao-burger/src/app/home/home.page.html
@@ -44,7 +44,7 @@
  
              <ion-row>
                <ion-col size="6" class="img-produto" >
-                 <img [src]="cardapioImg"/>
+                 <img [src]="cardapioImg + cardapio1.imagem"/>
                </ion-col>
              </ion-row>
  
@@ -81,7 +81,7 @@
  
              <ion-row>
                <ion-col size="6" class="img-produto" >
-                 <img [src]="cardapioImg"/>
+                 <img [src]="cardapioImg + cardapio2.imagem" />
                </ion-col>
              </ion-row>
  
@@ -110,6 +110,7 @@
 
 
   </ion-grid>
+
 
 </ion-content>
 
