--- a/pao-burger/src/app/home/home.page.scss
+++ b/pao-burger/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -15,10 +14,8 @@
 
 #container p {
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
+  line-height: 22px;  
+  color: #909090;
   margin: 0;
 }
 
@@ -27,13 +24,14 @@
 }
 
 .c1-header{
-  background-color: #4f5050;
+  background-color: #403e40;
   font-size: 1.5rem;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .c1-opcoes{
   font-size: 2.0rem;
   background-color: #920ddf ;
@@ -42,6 +40,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .c2-opcoes{
   font-size: 2.0rem;
   background-color: #920ddf ;
@@ -51,12 +50,46 @@
   align-items: center;
 }
 .b1-compra{
-  background-color: #ff9602;
+  background-color: #7d2e9c;
   border-radius: 70%;
 }
 .o1-burger{
-  color:#000000;
+  color:#ffffff;
 }
 .o1-batata{
-  color:#000000;;
+  color:#ffffff;;
+}
+
+.img-produto{
+  padding: 0;
+  text-align: center;
+  height: 120px;
+  margin-left: 25%;
+}
+
+ .img-produto img{
+  height: 85%;
+ }
+
+.card-produto{
+  background-color: rgb(255, 255, 255);
+  padding: 15px 10px;
+  border-radius: 8px;
+  -webkit-box-shadow: -0.5px 0.5px 4px 0px rgba(121, 121, 121, 0.75);
+  -moz-box-shadow: -0.5px 0.5px 4px 0px rgba(121, 121, 121, 0.75);
+  box-shadow: -0.5px 0.5px 4px 0px rgba(121, 121, 121, 0.75);
+}
+
+.col-botao-detalhes{
+  margin-top: 15px;
+  text-align: center;
+}
+
+.botao-detalhes{
+  padding: 6px 12px;
+  background-color: rgb(128, 46, 151);
+  color: rgb(249, 249, 249);
+  width: 100px;
+  border-radius: 4px;
+  text-align: center;
 }
