--- a/pao-burger/src/app/home/home.page.html
+++ b/pao-burger/src/app/home/home.page.html
@@ -61,7 +61,7 @@
              </ion-row>
  
              <ion-row>
-               <ion-col size="12" class="col-botao-detalhes">
+               <ion-col size="12" class="col-botao-detalhes" routerLink="/detalhes">
                  <span class="botao-detalhes"> Detalhes </span>
                </ion-col>
              </ion-row>
@@ -71,6 +71,7 @@
         </ion-col>
        </ion-row>
  
+       
   </ion-grid>
 
   <ion-grid *ngIf="segment == '1'">
@@ -98,7 +99,7 @@
              </ion-row>
  
              <ion-row>
-               <ion-col size="12" class="col-botao-detalhes">
+               <ion-col size="12" class="col-botao-detalhes" routerLink="/detalhes">
                  <span class="botao-detalhes"> Detalhes </span>
                </ion-col>
              </ion-row>
