Ajustes na aba detalhes

--- a/pao-burger/src/app/detalhes/detalhes.page.html
+++ b/pao-burger/src/app/detalhes/detalhes.page.html
@@ -16,7 +16,7 @@
 
   <ion-row>
     <ion-col size="12" class="descricao-produto">
-      {{ detalhes.descricao }}
+      {{ detalhes.Detalhes }}
     </ion-col>
   </ion-row>
   <ion-footer class="footer-produto">
