alterações no CSS, melhorias no codigo

--- a/pao-burger/src/app/detalhes/detalhes.page.scss
+++ b/pao-burger/src/app/detalhes/detalhes.page.scss
@@ -1,16 +1,36 @@
 .footer-produto{
-    background-color: #ccc;
+    background-color: #7d2e9c;
     padding-top: 15px;
     padding-bottom: 15px;
     font-weight: bold;
+    color: rgb(246, 240, 240);
 }
 
 .inp-quantidade{
-    color: #f8f4f4;
+    color: #ffffff;
     text-align: center;
-    background-color: var(--principal);
+    background-color: #461f46;
     border-radius: 8px;
     max-width: 100%;
     width: 100%;
     margin-left: 5px;
+}
+
+.descricao-produto{
+    text-align: center;
+    color: #010101;
+    font-size: 18px;
+    margin-top: 20px;
+    background-color: rgb(255, 255, 255);
+  padding: 15px 10px;
+  border-radius: 8px;
+  -webkit-box-shadow: -0.5px 0.5px 4px 0px rgba(121, 121, 121, 0.75);
+  -moz-box-shadow: -0.5px 0.5px 4px 0px rgba(121, 121, 121, 0.75);
+  box-shadow: -0.5px 0.5px 4px 0px rgba(121, 121, 121, 0.75);
+}
+
+.valor-produto{
+    color: #fcfcfc;
+    font-size: 28px;
+    text-align: center;
 }
