--- a/pao-burger/src/app/home/home.page.html
+++ b/pao-burger/src/app/home/home.page.html
@@ -77,7 +77,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button class="b1-compra" expand="full">
-    <ion-icon name="cart"></ion-icon>
+  <ion-button class="b1-compra" expand ="block" shape = "round" fill = "outline" color = "dark">
+    <ion-icon name="cart-outline"></ion-icon>
   </ion-button>
 </ion-footer>
