--- a/pao-burger/src/app/detalhes/detalhes.page.html
+++ b/pao-burger/src/app/detalhes/detalhes.page.html
@@ -3,11 +3,13 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>   
     </ion-buttons>
-    <ion-title>Voltar</ion-title>
+    <ion-title>{{detalhes.nome}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
+  
   <ion-row>
     <ion-col size="12" class="img-produto" >
       <img [src]="cardapioImg + detalhes.imagem"/>
@@ -16,31 +18,22 @@
 
   <ion-row>
     <ion-col size="12" class="descricao-produto">
-      {{ detalhes.Detalhes }}
+      {{detalhes.Detalhes}}
     </ion-col>
   </ion-row>
-  <ion-footer class="footer-produto">
-
-    <ion-row class="ion-align-items-center">
-      <ion-col size="6" class="valor-produto">
-        {{detalhes.valor}}
-      </ion-col>
-    </ion-row>
-  </ion-footer>
 </ion-content>
 
-
-
 <ion-footer class="footer-produto">
+
   <ion-row class="ion-align-items-center">
     <ion-col size="6" class="valor-produto">
-      
+      {{detalhes.valor}}
     </ion-col>
     
     <ion-col size="6">
       <ion-row class="ion-align-items-center">
         <ion-col size="4" class="ion-text-center">
-          <ion-button (click)="add()">
+          <ion-button (click)="add()" shape = "round" fill = "outline" color = "dark" size = "small">
             <ion-icon name="add"></ion-icon>
           </ion-button>
         </ion-col>
@@ -50,7 +43,7 @@
         </ion-col>
         
         <ion-col size="4" class="ion-text-center">
-          <ion-button (click)="remove()">
+          <ion-button (click)="remove()" shape = "round" fill = "outline" color = "dark" size="small">
             <ion-icon name="remove"></ion-icon>
           </ion-button>
         </ion-col>
